Resumo: Adicionado numeração

--- a/resumo/resumo.tex
+++ b/resumo/resumo.tex
@@ -17,4 +17,19 @@
 \section{Introdução}
 al e je a js gssgkls gasjg 
 
+\subsection{Arquitetura x Organização}
+\subsection{Estrutura x função}
+\subsection{Estrutura single core x multi core}
+\subsection{Estrutura interna do core}
+
+\section{Breve história dos computadores: Primeira geração}
+
+\subsection{Arquitetura de Von Neumann}
+\subsection{Descrição dos elementos de Von Neumann}
+\subsection{Endereçamento de memória}
+
+\section{Breve história dos computadores: Segunda geração}
+\section{Breve história dos computadores: Terceira geração}
+\section{Breve história dos computadores: Gerações posteriores}
+
 \end{document}
