Definida estrutura básica do resumo

--- a/resumo/resumo.tex
+++ b/resumo/resumo.tex
@@ -15,6 +15,14 @@
 \maketitle
 
 \section{Introdução}
-al e je a js gssgkls gasjg 
+\subsection{Estruturas e Funções}
+
+\section{História}
+
+\section{Aplicações}
+\subsection{Arquitetura x86}
+\subsection{Sistemas Embarcados}
+\subsection{Arquitetura ARM}
+\subsection{Computação em Nuvem}
 
 \end{document}
