--- a/resumo/resumo.tex
+++ b/resumo/resumo.tex
@@ -34,7 +34,7 @@ computador IAS, o qual é um protótipo para quase todos os computadores de
 propósito geral de hoje em dia.
 
 \begin{figure}[h]
-    \caption{Estrutura do IAS.}
+    \caption{Figura 1: Estrutura do IAS.}
     \centering
     \includegraphics[width=0.58\textwidth]{ias.png}
 \end{figure}
@@ -98,16 +98,26 @@ O IAS possui 4.096 locais de armazenamento chamados de palavras, sendo esses dad
 	\item\quad 2) Palavra de instrução: pode conter duas instruções de 20 bits, cada uma contendo um opcode de 8 bits - referência que um processador possui para uma determinada instrução - e 12 bits de endereço de memória.
 \end{itemize}
 
-\begin{figure}[h]
-    \caption{Tipos de palavras.}
-    \centering
-    \includegraphics[width=0.75\textwidth]{palavras.png}
-\end{figure}
+% Arrumar posição da imagem
+%\begin{figure}[hb]
+%   \caption{Figura 2: Tipos de palavras.}\textbf{}
+%   \centering
+%  \includegraphics[width=0.75\textwidth]{palavras.png}
+%\end{figure}
 
 \subsubsection{Registradores}
+Passando para as unidades menores do computador IAS, tem-se os locais de armazenamento da unidade de controle e da ALU, chamados de registradores.
+
+\begin{itemize}
+	\item Registrador de buffer de memória (MBR): é o local onde permanece a palavra a ser armazenada na memória ou enviada à unidade E/S, como também é o local para receber a palavra a partir da E/S ou a partir da memória.
+	\item Registrador de endereço de memória (MAR): local que contém o endereço da memória da palavra a ser escrito ou lido pelo MBR.
+	\item Registrador de instruções (IR): contém o opcode de 8 bits da instrução que está sendo executada.
+	\item Registrador de buffer de instrução (IBR): mantém temporariamente a instrução da direita da palavra da memória.
+	\item Contador do programa (PC): mantém o próximo par de instruções a ser buscado na memória.
+	\item Acumulador (AC) e quociente-multiplicador (MQ): registradores usados para realizar as operações da ALU, sendo o AC o que mantém os bits mais significativos e o MQ os bits menos significativos.
+\end{itemize}
+
 \subsection{Ciclos do IAS}
-
-
 \subsection{Segunda geração: Transístores}
 \subsection{Terceira geração: Circuitos Integrados}
 \subsection{Gerações posteriores}
