Resumo: arrumado numeração

--- a/resumo/resumo.tex
+++ b/resumo/resumo.tex
@@ -90,7 +90,7 @@ computador. \\
 
 Como já antes dito, o modelo de IAS reflete em grande parte dos computadores atuais, por isso sua importância no mundo da computação.
 
-\subsection{Endereçamento de memória}
+\subsubsection{Endereçamento de memória}
 O IAS possui 4.096 locais de armazenamento chamados de palavras, sendo esses dados ou instruções, cada um com 40 bits. As palavras são dividas em duas: palavra de número e palavra de instrução. \\
 
 \begin{itemize}
@@ -117,10 +117,12 @@ Passando para as unidades menores do computador IAS, tem-se os locais de armazen
 	\item Acumulador (AC) e quociente-multiplicador (MQ): registradores usados para realizar as operações da ALU, sendo o AC o que mantém os bits mais significativos e o MQ os bits menos significativos.
 \end{itemize}
 
-\subsection{Ciclos do IAS}
+\subsubsection{Ciclos do IAS}
+\subsubsection{Conjunto de instruções IAS}
 \subsection{Segunda geração: Transístores}
 \subsection{Terceira geração: Circuitos Integrados}
 \subsection{Gerações posteriores}
+\subsection{Comparação entre as gerações}
 
 \section{Aplicações} 
 \subsection{Arquitetura x86} 
